part 2 - **2**: fix button vertical align

--- a/src/static/sass/components/_modal.scss
+++ b/src/static/sass/components/_modal.scss
@@ -105,6 +105,8 @@
   }
 
   &__btn {
+    display: inline-flex;
+    align-items: center;
     text-transform: uppercase;
     font-weight: 500;
     cursor: pointer;
