--- a/src/static/sass/layout/_header.scss
+++ b/src/static/sass/layout/_header.scss
@@ -24,6 +24,8 @@
 
     &-btnPlay,
     &-btnMyList {
+      display: inline-flex;
+      align-items: center;
       cursor: pointer;
       font-size: 1.6rem;
       color: #fff;
